data/derived/sp14/progs/unify/prog2847.ml.out
Characters 68-81:
  digitsOfInt n mod 10::[];;
  ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
